overflow x hidden to prevent weird scrolling

--- a/CSS/css.css
+++ b/CSS/css.css
@@ -6,9 +6,10 @@
 
 /* Image at the top */
 .header {
-    width: auto;  
+    width: auto;
     text-align: center;
     background-color: rgb(25, 29, 93);
+    overflow-x: hidden;
 }
 .headerImg {
     max-width: 100%;
